@@ -93,3 +93,5 @@ Fixed a multithead bug on optimization (StageDEF)
 Fixed some 64 bit warnings on size_t to uint32 conversions
 update black point detection algorithm to reflect ICC changes
 Added new cmsPlugInTHR() and fixed some race conditions (thanks to Artifex)
+Added error descriptions on cmsSmoothToneCurve 
+
